--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="span4">
-                        <h4>Adresse</h4>
+                        <h4>Adressess</h4>
                         <p><i class="icon-map-marker"></i>&nbsp;{{ adresse }}</p>
                     </div>
 
