--- a/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Produits/layout/index.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Produits/layout/index.html.twig
@@ -1,16 +1,18 @@
 {% extends '::layout/layoutAdmin.html.twig' %}
 
 {% block body -%}
-    <h1>Produits list</h1>
+    <h1>Liste des produits</h1>
 
     <table class="table table-striped table-hover">
         <thead>
-            <tr>
-                <th>Nom</th>
-                <th>Prix</th>
-                <th>Disponible</th>
-                <th>Actions</th>
-            </tr>
+        <tr>
+            <th>Nom</th>
+            <th>Prix</th>
+            <th>Disponible</th>
+            <th>Categorie</th>
+            <th>image</th>
+            <th>Actions</th>
+        </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
@@ -18,6 +20,8 @@
                 <td>{{ entity.nom }}</td>
                 <td>{{ entity.prix }}</td>
                 <td>{{ entity.disponible }}</td>
+                <td></td>
+                <td></td>
                 <td>
                     <a href="{{ path('adminProduits_show', { 'id': entity.id }) }}"><i class="icon-book"></i></a>
                     <a href="{{ path('adminProduits_edit', { 'id': entity.id }) }}"><i class="icon-edit"></i></a>
@@ -27,11 +31,11 @@
         </tbody>
     </table>
 
-        <ul>
+    <ul>
         <li>
             <a href="{{ path('adminProduits_new') }}">
                 Create a new entry
             </a>
         </li>
     </ul>
-    {% endblock %}
+{% endblock %}
