--- a/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Produits/layout/new.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Produits/layout/new.html.twig
@@ -1,15 +1,17 @@
 {% extends '::layout/layoutAdmin.html.twig' %}
 
 {% block body -%}
-    <h1>Produits creation</h1>
+    <h1>Ajouter Produits</h1>
 
-    {{ form(form) }}
+    <form action="{{ path('adminProduits_create') }}" method="POST" {{ form_enctype(form) }}>
+        {{ form(form) }}
+    </form>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('adminProduits') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+    <ul class="record_actions">
+        <li>
+            <a href="{{ path('adminProduits') }}">
+                Back to the list
+            </a>
+        </li>
+    </ul>
 {% endblock %}
