--- a/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Produits/layout/show.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Produits/layout/show.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>Produits</h1>
 
-    <table class="record_properties">
+    <table class="table table-striped table-hover">
         <tbody>
         <tr>
             <th>Id</th>
@@ -29,16 +29,16 @@
     </table>
 
     <ul class="record_actions">
-        <li>
+        <li >
             <a href="{{ path('adminProduits') }}">
                 Back to the list
             </a>
         </li>
-        <li>
-            <a href="{{ path('adminProduits_edit', { 'id': entity.id }) }}">
+        <li >
+            <a  href="{{ path('adminProduits_edit', { 'id': entity.id }) }}">
                 Edit
             </a>
         </li>
-        <li>{{ form(delete_form) }}</li>
+        <li >{{ form(delete_form) }}</li>
     </ul>
 {% endblock %}
