--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/produits.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/produits.html.twig
@@ -1,26 +1,43 @@
 {% extends "::layout/layout.html.twig" %}
 
 {% block body %}
-<div class="container">
-    <div class="row">
+    <div class="container">
+        <div class="row">
 
-        <div class="span3">
+            <div class="span3">
 
-            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                {% include 'UtilisateursBundle:Default:modulesUsed/utilisateursConnecte.html.twig' %}   
-            {% else %}
-                {% include 'UtilisateursBundle:Default:modulesUsed/utilisateurs.html.twig' %}   
-            {% endif %}
 
-        </div>
-        
-        <div class="span9">
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    {% include 'UtilisateursBundle:Default:modulesUsed/utilisateursConnecte.html.twig' %}
+                {% else %}
+                    {% include 'UtilisateursBundle:Default:modulesUsed/utilisateurs.html.twig' %}
+                {% endif %}
 
-                
-            {% else %}
-                Aucun produit
-            {% endif %}
+            </div>
+
+            <div class="span9">
+                {% if produits|length != 0 %}
+                    <ul class="thumbnails">
+                        {% for produit in produits %}
+                            <li class="span3">
+                                <div class="thumbnail">
+                                    <img src="{{ asset('uploads/' ~ produit.image.Path('produitThumb')) }}" alt="{{ produit.image.name }}" width="300" height="150">
+                                    <div class="caption">
+                                        <h4>{{ produit.nom }}</h4>
+                                        <p>{{ produit.prix }}MAD</p>
+                                        <a class="btn btn-primary" href="{{ path('presentation', { 'id' : produit.id }) }}">Plus d'infos</a>
+
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+
+
+
+                {% else %}
+                    Aucun produit Pour cette categories
+                {% endif %}
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
