--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/presentation.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/presentation.html.twig
@@ -1,8 +1,32 @@
 {% extends "::layout/layout.html.twig" %}
 
-{% block titre %}{{ produit.nom }}{% endblock %}
-{% block description %}{{ produit.description }}{% endblock %}
 
 {% block body %}
+    <div class="container">
+        <div class="row">
 
+            <div class="span3">
+                {% include '::modulesUsed/navigation.html.twig' %}
+
+            </div>
+
+            <div class="span9">
+                <div class="row">
+                    <div class="span5">
+                        <img src="{{ asset('uploads/' ~ produit.image.Path) }}" alt="{{ produit.image.name }}" width="470" height="310">
+
+                    </div>
+
+                    <div class="span4">
+                        <h4>{{ produit.nom }}</h4>
+                        <h5>Categorie:{{ produit.categorie.nomcategorie }}</h5>
+                        <p>{{ produit.description }}</p>
+                        <p>{{ produit.prix }}MAD</p>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
