--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/produits.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/produits.html.twig
@@ -21,7 +21,7 @@
                         {% for produit in produits %}
                             <li class="span3">
                                 <div class="thumbnail">
-                                    <img src="{{ asset('uploads/' ~ produit.image.Path }}" alt="{{ produit.image.name }}" width="300" height="150">
+                                    <img src="{{ asset('uploads/' ~ produit.image.Path) }}" alt="{{ produit.image.name }}" width="300" height="150">
                                     <div class="caption">
                                         <h4>{{ produit.nom }}</h4>
                                         <p>{{ produit.prix }}MAD</p>
