--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -21,7 +21,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#">Ecommerce</a>
+                    <a class="brand" href="{{ path('produits') }}">Ecommerce</a>
                     <div class="nav-collapse collapse">
                         {% render(controller('EcommerceBundle:Produits:recherche')) %}
                     </div>
