ajouter Client et Photo Client

--- a/app/Resources/views/modulesUsed/navigationAdmin.html.twig
+++ b/app/Resources/views/modulesUsed/navigationAdmin.html.twig
@@ -8,6 +8,12 @@
             <li>
                 <a href="{{ path('adminCategories') }}">Catégories produits</a>
             </li>
+            <li>
+                <a href="{{ path('adminPhotoClient') }}">Photo Clients</a>
+            </li>
+            <li>
+                <a href="{{ path('adminClient') }}">Clients</a>
+            </li>
         </ul>
     </div>
     
