modifer client entity

--- a/app/Resources/views/modulesUsed/navigationAdmin.html.twig
+++ b/app/Resources/views/modulesUsed/navigationAdmin.html.twig
@@ -8,12 +8,17 @@
             <li>
                 <a href="{{ path('adminCategories') }}">Catégories produits</a>
             </li>
-            <li>
-                <a href="{{ path('adminPhotoClient') }}">Photo Clients</a>
-            </li>
+
             <li>
                 <a href="{{ path('adminClient') }}">Clients</a>
             </li>
+            <li>
+                <a href="{{ path('fos_user_registration_register') }}">Ajouter Commercial</a>
+            </li>
+
+
+
+
         </ul>
     </div>
     
