--- a/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Clients/showClient.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Clients/showClient.html.twig
@@ -8,7 +8,7 @@
         <tbody>
         <tr>
             <th>Id</th>
-            <td>{{ entity.idclient }}</td>
+            <td>{{ entity.id }}</td>
 
         </tr>
         <tr>
@@ -24,6 +24,11 @@
         <tr>
             <th>Telephone</th>
             <td>{{ entity.telephone }}</td>
+
+        </tr>
+        <tr>
+            <th>Telephone</th>
+            <td>{{ entity.utilisateurs.username }}</td>
 
         </tr>
         </tbody>
