--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -2,17 +2,11 @@
 
 <div class="row">
     <div class="span12">
-        <h2>Connexion</h2>
+        <h2>Inscription</h2>
         <div id="collapseOne" class="accordion-body collapse in">
             <div class="accordion-inner">
                 <div class="span4">
-                    <h4>Pas encore inscrit ?</h4>
-                    <em>
-                        nous vous invitons à vous inscrire<br />
-                        afin de passer votre commande et de manger équilibré.
-                    </em>
                 </div>
-
                 <div class="span4 offset2">
                     <h4>Inscription</h4>
                     <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
