--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -5,9 +5,9 @@
         <h2>Inscription</h2>
         <div id="collapseOne" class="accordion-body collapse in">
             <div class="accordion-inner">
-                <div class="span4">
+                <div class="span">
                 </div>
-                <div class="span4 offset2">
+                <div class="span6 offset2">
                     <h4>Inscription</h4>
                     <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
                         {{ form_widget(form) }}
