--- a/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Clients/showClient.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Clients/showClient.html.twig
@@ -2,7 +2,7 @@
 {% extends '::layout/layoutAdmin.html.twig' %}
 
 {% block body -%}
-    <h1>Categories</h1>
+    <h1>Client</h1>
 
     <table class="record_properties">
         <tbody>
