--- a/app/Resources/views/layout/layout.html.twig
+++ b/app/Resources/views/layout/layout.html.twig
@@ -11,8 +11,10 @@
         <link rel="stylesheet" href="{{ asset('css/font-awesome.css') }}" />
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+
     </head>
     <body>
+
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
@@ -28,7 +30,20 @@
                 </div>
             </div>
         </div>
+
+
+
         {% block body %}{% endblock %}
+        {% if is_granted('ROLE_ADMIN') %}
+        <div class="container">
+            <div class="row">
+                {% include '::modulesUsed/navigationAdmin.html.twig' %}
+                <div class="span9">
+
+                </div>
+            </div>
+        </div>
+        {% endif %}
         <hr />
         <footer id="footer" class="vspace20">
             <div class="container">
