--- a/app/Resources/views/layout/layoutAdmin.html.twig
+++ b/app/Resources/views/layout/layoutAdmin.html.twig
@@ -21,7 +21,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#">Administration</a>
+                    <a class="brand" href="{{ path('produits') }}">Administration</a>
+                    <div class="nav-collapse collapse">
+                        {% render(controller('EcommerceBundle:Produits:recherche')) %}
+                    </div>
+                    <a class="brand" href="#"></a>
                 </div>
             </div>
         </div>
@@ -29,11 +33,20 @@
         <div class="container">
             <div class="row">
                 {% include '::modulesUsed/navigationAdmin.html.twig' %}
-                <div class="span9">
-                    {% block body %}{% endblock %}
+                <div class="span3">
+
                 </div>
+
+                <div class="span9">
+                    {% block body %}
+
+                    {% endblock %}
+
+                </div>
+
             </div>
         </div>
+
 
         <hr />
 	<footer id="footer" class="vspace20">
