--- a/app/Resources/views/modulesUsed/navigation.html.twig
+++ b/app/Resources/views/modulesUsed/navigation.html.twig
@@ -8,3 +8,12 @@
 </div>
 
 
+<div class="well">
+    <ul class="nav nav-list">
+        <li>
+        <li class="nav-header">Nos Clients</li>
+            <a href="{{ path('clients') }}">informations Clients</a>
+        </li>
+
+    </ul>
+</div>
