--- a/app/Resources/views/modulesUsed/navigationAdmin.html.twig
+++ b/app/Resources/views/modulesUsed/navigationAdmin.html.twig
@@ -1,7 +1,8 @@
-<div class="span3">
 
+<div class="span3">
     <div class="well">
         <ul class="nav nav-list">
+            <li class="nav-header">Administration</li>
             <li>
                 <a href="{{ path('adminProduits') }}">Produits</a>
             </li>
