--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/panier/layout/panier.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/panier/layout/panier.html.twig
@@ -2,10 +2,8 @@
 
 {% set totalHT = 0 %}
 {% set totalTTC = 0%}
-{% set refTva = {} %}
-{% for produit in produits %}
-    {% set refTva = refTva|merge({ ('%' ~ produit.tva.valeur) : 0 }) %}
-{% endfor %}
+{% set tva = 0.2 %}
+{% set total = 0 %}
 
 {% block body %}
     <div class="container">
@@ -23,7 +21,7 @@
                     </div>
                 {% endfor %}
 
-                <h2>Votre panier</h2>
+                <h2>Mes Commandes</h2>
                 <table class="table table-striped table-hover">
                     <thead>
                     <tr>
@@ -57,8 +55,9 @@
                             </form>
                         </tr>
                         {% set totalHT = totalHT + (produit.prix * panier[produit.id]) %}
-                        {% set totalTTC = totalTTC + (produit.prix * panier[produit.id])|tva(produit.tva.multiplicate) %}
-                        {% set refTva = refTva|merge({ ('%' ~ produit.tva.valeur) : refTva['%' ~ produit.tva.valeur] + ( produit.prix * panier[produit.id])|montantTva(produit.tva.multiplicate) }) %}
+                        {% set totalTTC = (totalHT * tva) + totalHT %}
+                        {% set total = (totalHT * tva)  %}
+
                     {% endfor %}
                     </tbody>
                 </table>
@@ -66,16 +65,14 @@
                     <dl class="dl-horizontal pull-right">
                         <dt>Total HT :</dt><dd>{{ totalHT }} MAD</dd>
 
-                        {% for key, tva in refTva %}
-                            <dt>TVA {{ key }} :</dt><dd>{{ tva }} MAD</dd>
-                        {% endfor %}
+                        <dt>TVA 20%  :</dt><dd>{{ total }} MAD</dd>
 
                         <dt>Total TTC :</dt><dd>{{ totalTTC }} MAD</dd>
                     </dl>
                     <div class="clearfix"></div>
-                    <a href="" class="btn btn-success pull-right">Valider mon panier</a>
+                    <a href="" class="btn btn-success pull-right">Valider la commande</a>
                 {% endif %}
-                <a href="{{ path('produits') }}" class="btn btn-primary">Continuer mes achats</a>
+                <a href="{{ path('produits') }}" class="btn btn-primary">Continuer </a>
             </div>
 
         </div>
