--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/panier/layout/panier.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/panier/layout/panier.html.twig
@@ -70,7 +70,7 @@
                         <dt>Total TTC :</dt><dd>{{ totalTTC }} MAD</dd>
                     </dl>
                     <div class="clearfix"></div>
-                    <a href="" class="btn btn-success pull-right">Valider la commande</a>
+                    <a href="{{ path('valider') }}" class="btn btn-success pull-right">Valider la commande</a>
                 {% endif %}
                 <a href="{{ path('produits') }}" class="btn btn-primary">Continuer </a>
             </div>
