--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/presentation.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/produits/layout/presentation.html.twig
@@ -7,6 +7,7 @@
 
             <div class="span3">
                 {% include '::modulesUsed/navigation.html.twig' %}
+                {% render(controller('EcommerceBundle:Panier:menu')) %}
 
             </div>
 
