--- a/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Client/index.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Client/index.html.twig
@@ -29,7 +29,7 @@
                 <td>{{ entity.email }}</td>
                 <td>{{ entity.nomdirigeant }}</td>
                 <td>{{ entity.utilisateurs.username }}</td>
-                <td><img src="{{ asset('uploads/' ~ entity.image.Path) }}" alt="{{ entity.image.name }}" width="80" height="80"></td>
+                <td><img src="{{ asset('uploads/' ~ entity.path) }}"  width="80" height="80"></td>
                 <td>
                     <a href="{{ path('adminClient_show', { 'id': entity.id }) }}"><i class="icon-book"></i></a>
                     <a href="{{ path('adminClient_edit', { 'id': entity.id }) }}"><i class="icon-edit"></i></a>
