--- a/app/Resources/views/modulesUsed/navigationAdmin.html.twig
+++ b/app/Resources/views/modulesUsed/navigationAdmin.html.twig
@@ -14,7 +14,10 @@
                 <a href="{{ path('adminClient') }}">Clients</a>
             </li>
             <li>
-                <a href="{{ path('fos_user_registration_register') }}">Ajouter Commercial</a>
+                <a href="{{ path('adminUsers') }}"> Commercial</a>
+            </li>
+            <li>
+                <a href="{{ path('adminTelecontact') }}"> Telecontact</a>
             </li>
 
 
