--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/panier/layout/valider.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/panier/layout/valider.html.twig
@@ -21,8 +21,19 @@
                         <th>Total HT</th>
                     </tr>
                     </thead>
+                    <tbody>
+
+
+                    </tbody>
 
                 </table>
+
+
+
+
+
+
+
 
 
             </div>
