--- a/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Client/index.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Administration/Client/index.html.twig
@@ -19,7 +19,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for entity in entities %}
+        {% for entity in clients %}
             <tr>
                 <td>{{ entity.raison }}</td>
                 <td>{{ entity.adresse }}</td>
@@ -36,9 +36,12 @@
                 </td>
             </tr>
         {% endfor %}
+
         </tbody>
     </table>
-
+    <div class="navigation">
+        {{ knp_pagination_render(clients) }}
+    </div>
     <ul>
         <li>
             <a href="{{ path('adminClient_new') }}">
@@ -46,4 +49,5 @@
             </a>
         </li>
     </ul>
+
 {% endblock %}
