--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -9,51 +9,125 @@
         <h3>PROFIL DU CONSEILLER COMMERCIAL</h3>
         <div id="collapseOne" class="accordion-body collapse in">
             <div class="accordion-inner">
-                <div class="span6">
-                    <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
-                    <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
-                    <p>{{ 'Adresse'|trans }}: {{ user.adresse }}</p>
-                    <p>{{ 'Téléphone'|trans }}: {{ user.telephone }}</p>
-                    <p>{{ 'Description'|trans }}: {{ user.description }}</p>
-                    <p>{{ 'Année expérience evant embauche'|trans }}: {{ user.anneeExpAvtEmb }}</p>
-                    <p>{{ 'Nombre client d\'année precidente'|trans }}: {{ user.nbrCltAnneePrec }}</p>
-                    <p>{{ 'Profil'|trans }}: {{ user.profil }}</p>
-                    <p>{{ 'Login'|trans }}: {{ user.nom }}</p>
-                    <p>{{ 'Login'|trans }}: {{ user.nom }}</p>
-                    <td><img src="{{ asset('uploads/' ~ user.path) }}"  width="80" height="80"></td>
-                    <h5>Mes Clients:</h5>
-                    <td>
-                        <ul>
-                        {% for en in user.client %}
-                            <li>
-                        <img src="{{ asset('uploads/' ~en.path) }}"  width="80" height="80">
-                            </li>
-                        </ul>
-                    {% endfor %}
-
-                    </td>
+                <div class="span9">
 
 
-<hr>
+                    <table class="table  table-hover">
+
+
+
+                    <tr>
+                             <td></td>
+                            <td>Expertise Métier</td>
+                            <td>Expérience</td>
+                            <td>Références Clients</td>
+                        </tr>
+                        </tr>
+                        <td class="span2" style="background-color: #fedc32;margin: 0 auto!important;">
+
+                                <img src="{{ asset('uploads/' ~user.path) }}"  width="80" height="80" style="
+                                            -moz-border-radius: 50px!important;
+                                            -webkit-border-radius: 50px!important;
+                                            border-radius: 100%!important; margin: 0 auto">
+                                <p style="text-align: center;Font-Weight: Bold;"> {{ user.username }}
+                                <p style="text-align: center;"> {{ user.profil }}
+
+                        </td>
+                        <td>
+                            <ul>
+                                <li class="span2"><p> {{ user.profil }}</p></li><br>
+                                <li class="span2"><p> {{ user.description }}</p></li>
+                            </ul>
+
+                        </td>
+                        <td>
+                            <ul>
+                                <li class="span2" ><p> <b>{{ user.anneeEmb|time_diff  }}  </b>  {{ 'en tant que Conseiller en Communication auprèes des professionnels' }}<br>
+                                        </p></li>
+
+                            </ul>
+
+                        </td>
+                        <td>
+
+                            <ul>
+                                {% for en in user.client %}
+                                <li>
+                                    <img src="{{ asset('uploads/' ~en.path) }}"  width="80" height="80">
+                                </li>
+                            </ul>
+                            {% endfor %}
+
+                        </td>
+                        </td>
+                    </table>
+                    <hr>
                 </div>
             </div>
         </div>
     </div>
-
 
     <div class="span9">
         <h3>PRESENTATION DE L'ENTREPRISE</h3>
         <div id="collapseOne" class="accordion-body collapse in">
             <div class="accordion-inner">
-                <div class="span6">
+                <div class="span9">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <td></td>
+                            <td>Expertise Métier</td>
+                            <td>Expérience</td>
+                            <td>Références Clients</td>
+                        </tr>
+                        </thead>
+                        <td class="span2" style="background-color: #fedc32;margin: 0 auto!important;">
 
 
+                                <p style="text-align: center;Font-Weight: Bold;"> {{ user.teleconatct.nom }}
+                                <p style="text-align: center;"> {{ user.teleconatct.profil }}
 
+                        </td>
+                        <td>
+                            <ul>
+                                <li class="span2"><p> {{ user.teleconatct.profil }}</p></li><br>
+                                <li class="span2"><p> {{ user.teleconatct.description1 }}</p></li><br>
+                                <li class="span2"><p> {{ user.teleconatct.description2 }}</p></li><br>
+                                <li class="span2"><p> {{ user.teleconatct.description3 }}</p></li>
+                            </ul>
 
+                        </td>
+                        <td>
+
+                            <ul>
+                                <li  class="span2"><p> <b>{{ user.teleconatct.experience|time_diff  }}  </b>  {{ ' à collaborer avec lensemble
+                                                             des professionnels du maroc et
+                                                             d\'innovatons pour leur apporter
+                                                              des solution efficaces à leur
+                                                              développement'|trans }}</p></li>
+
+                            </ul>
+
+                        </td>
+                        <td>
+
+                            <ul>
+                                {% for en in user.client %}
+                                <li>
+                                    <img src="{{ asset('uploads/' ~en.path) }}"  width="80" height="80">
+                                </li>
+                            </ul>
+                            {% endfor %}
+
+                        </td>
+                        </td>
+                    </table>
+                    <hr>
                 </div>
             </div>
         </div>
     </div>
+
 
 
 
