--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencementdevis.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencementdevis.html.twig
@@ -15,11 +15,17 @@
         {% endfor %}
         </select>
 
+<span id="prestaAjax" style="display: none">
+        <img src='../../web/ajax-loader.gif' alt='loading...'  height="25" width="25"/>
 
-        <select   id="prestation">
+        </span><select   id="prestation">
             <option  selected >Selectionné une prestation</option>
+        </select> <br>
 
-        </select><br>
+        <div id="test"></div>
+
+
+{#
         <div style="align-content: center; margin-left:207px">
 
             <button type="button" class="btn btn-info bouton-1" data-toggle="collapse" data-target="#demo-1">
@@ -27,7 +33,7 @@
             </button>
 <div id="demo-1" class="collapse bouton-2">
 
-            <select {#class="selectpicker "   multiple data-max-options="1" data-live-search="true"#} id="select-rubrique">
+            <select #}{#class="selectpicker "   multiple data-max-options="1" data-live-search="true"#}{# id="select-rubrique">
                 <option  selected >Selectionné une rubrique</option>
                 {% for rubriqu in rubriques %}
 
@@ -36,25 +42,15 @@
             </select>
 
 
-            <select   id="prestation">
-                <option  selected >Selectionné une prestation</option>
-            </select>
+        <select   id="prestation">
+            <option  selected >Selectionné une prestation</option>
+        </select>
+
+
+
 </div>
-        </div>
-     {#   <select class="selectpicker "  #}{#multiple data-max-options="1"#}{#  >
+        </div>#}
 
-
-            #}{#         {% for presta in prestations %}
-                         <option value="{{ presta.id }}" >{{ presta.prestation }}</option>
-                     {% endfor %}#}{#
-
-
-        </select>#}
-
-{#
-        <h4></h4>
-        <ul id="JQResult">
-        </ul>#}
 
 
     </form>
@@ -70,6 +66,9 @@
 
 
             jQuery('#select-rubrique').on('change', function () {
+
+                jQuery('#prestaAjax').css('display','');
+
                 console.log("CHANGE rubrique AND prestation....................");
                 var select = jQuery(this);
                 var r = rubrique.val();
@@ -78,19 +77,31 @@
            //     console.log('rubrique : ', r);
                 var data_send = { 'rubrique': r};
                 $.ajax({
+
                     url: '{{ path('ajax') }}',
                     type: 'POST',
                     data: data_send,
                     statusCode: {
+
+
                         //traitement en cas de succès
                         200: function (response) {
                             var successMessage = response;
 
-              $('#prestation').children("option").remove();
-              $.each(JSON.parse(successMessage), function(i, pres) {
-                  $('#prestation').append(('<option value="' +pres.id+'">'+pres.prestation+'</option>'));
+                    if(response){
 
-              });
+
+                        $('#prestation').children("option").remove();
+                        $.each(JSON.parse(successMessage), function(i, pres) {
+                            $('#prestation').append(('<option value="' +pres.id+'">'+pres.prestation+'</option>'));
+                            jQuery('#prestaAjax').css('display','none');
+                        });
+                    }  else
+
+
+
+                  jQuery('#prestaAjax').css('display','none');
+
 
                             //on vide les champs formulaires ou on le supprime ou ...
                             //on retire le loader...
@@ -101,9 +112,15 @@
                             var errorsForm = response.responseJSON.formErrors;
                             //on affiche les erreurs...
                             alert('error');
+                            jQuery('#prestaAjax').css('display','none');
                         }
                     }
+
                 });
+
+
+                $( "#select-rubrique" ).clone().appendTo("#test");
+
 
             });
         });
