--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencementdevis.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencementdevis.html.twig
@@ -8,53 +8,46 @@
         <textarea></textarea><br>
         selectionner rubrique principale  :
         <div id="contenu_lists">
-        <div id="select_rub_prest">
-        <select {#class="selectpicker "   multiple data-max-options="1" data-live-search="true"#} id="select-rubrique">
-            <option  selected >Selectionné une rubrique</option>
-        {% for rubriqu in rubriques %}
+            <div id="select_rub_prest">
+                <select {#class="selectpicker "   multiple data-max-options="1" data-live-search="true"#} id="select-rubrique">
+                    <option  selected >Selectionné une rubrique</option>
+                    {% for rubriqu in rubriques %}
 
-            <option value="{{ rubriqu.id }}" >{{ rubriqu.libelle }}</option>
-        {% endfor %}
-        </select>
+                        <option value="{{ rubriqu.id }}" >{{ rubriqu.libelle }}</option>
+                    {% endfor %}
+                </select>
 
-<span id="prestaAjax" style="display: none">
+                <span id="prestaAjax" style="display: none">
         <img src='../../web/ajax-loader.gif' alt='loading...'  height="25" width="25"/>
 
         </span><select   id="prestation">
-            <option  selected >Selectionné une prestation</option>
-        </select> <br>
+                    <option  selected >Selectionné une prestation</option>
+                </select> <br>
+            </div>
         </div>
-        </div>
+
         <button id="addrub-btn" type="button" class="btn btn-info bouton-1" data-toggle="collapse" data-target="#demo-1">
             Ajouter rubrique suplémentaire &nbsp;   <span class="glyphicon glyphicon-triangle-bottom"></span>
         </button>
 
 
-{#
-        <div style="align-content: center; margin-left:207px">
-
-            <button type="button" class="btn btn-info bouton-1" data-toggle="collapse" data-target="#demo-1">
-                Ajouter rubrique suplémentaire &nbsp;   <span class="glyphicon glyphicon-triangle-bottom"></span>
-            </button>
-<div id="demo-1" class="collapse bouton-2">
-
-            <select #}{#class="selectpicker "   multiple data-max-options="1" data-live-search="true"#}{# id="select-rubrique">
-                <option  selected >Selectionné une rubrique</option>
-                {% for rubriqu in rubriques %}
-
-                    <option value="{{ rubriqu.id }}" >{{ rubriqu.libelle }}</option>
-                {% endfor %}
-            </select>
-
-
-        <select   id="prestation">
-            <option  selected >Selectionné une prestation</option>
-        </select>
-
-
-
-</div>
-        </div>#}
+        {#
+                <div style="align-content: center; margin-left:207px">
+                    <button type="button" class="btn btn-info bouton-1" data-toggle="collapse" data-target="#demo-1">
+                        Ajouter rubrique suplémentaire &nbsp;   <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    </button>
+        <div id="demo-1" class="collapse bouton-2">
+                    <select #}{#class="selectpicker "   multiple data-max-options="1" data-live-search="true"#}{# id="select-rubrique">
+                        <option  selected >Selectionné une rubrique</option>
+                        {% for rubriqu in rubriques %}
+                            <option value="{{ rubriqu.id }}" >{{ rubriqu.libelle }}</option>
+                        {% endfor %}
+                    </select>
+                <select   id="prestation">
+                    <option  selected >Selectionné une prestation</option>
+                </select>
+        </div>
+                </div>#}
 
 
 
@@ -63,27 +56,24 @@
     <script src="http://code.jquery.com/jquery.js"></script>
 
     <script type="text/javascript">
-
         $(document).ready(function() {
-
-            var rubrique = $('#select-rubrique');
-
+          /*  var rubrique = $(this);
+            console.log(rubrique .val());*/
 
             // declanché lorsqu'on change le choix de la rub
-
             $('#select-rubrique').on('change', function () {
+                var current = this;
+                var rubrique = $(this);
+                console.log(rubrique .val());
 
-               $('#prestaAjax').css('display','');
-
+                $('#prestaAjax').css('display','');
                 console.log("CHANGE rubrique AND prestation....................");
                 var select = jQuery(this);
                 var r = rubrique.val();
                 console.log('rubrique sss: ', r)
-
-           //     console.log('rubrique : ', r);
+                //     console.log('rubrique : ', r);
                 var data_send = { 'rubrique': r};
                 $.ajax({
-
                     url: '{{ path('ajax') }}',
                     type: 'POST',
                     data: data_send,
@@ -92,20 +82,22 @@
                         200: function (response) {
                             var successMessage = response;
 
-                        $('#prestation').children("option").remove();
-                        $.each(JSON.parse(successMessage), function(i, pres) {
-                            $('#prestation').append(('<option value="' +pres.id+'">'+pres.prestation+'</option>'));
+                          /*  $('#prestation').children("option").remove();*/
+
+                            $(current).siblings("select").first().find("option").remove();
+
+                            $.each(JSON.parse(successMessage), function(i, pres) {
+                                $(current).siblings("select").first().append(('<option value="' +pres.id+'">'+pres.prestation+'</option>'));
+                               /* $(current).next().remove();*/
+
+                               console.log(rubrique);
+
+                                $('#prestaAjax').css('display','none');
+                            });
                             $('#prestaAjax').css('display','none');
-                        });
-
-
-
-
-                  $('#prestaAjax').css('display','none');
-
                             //on vide les champs formulaires ou on le supprime ou ...
                             //on retire le loader...
-                            //on prévient l'utilistateur du bonne envoi...
+
                         },
                         //traitement en cas d'erreur (on peut aussi traiter le cas erreur 500...)
                         412: function (response) {
@@ -115,24 +107,21 @@
                             $('#prestaAjax').css('display','none');
                         }
                     }
-
                 });
-
-
-             //   $( "#select-rubrique" ).clone().appendTo("#test");
-
-
+                //   $( "#select-rubrique" ).clone().appendTo("#test");
             });
             //declanche lorsqu'on clique sur btn addrub-btn
+            var count = 1 ;
             $('#addrub-btn').on('click', function (){
-                var duplicatedLists=$("#select_rub_prest").last().clone();
-
-                duplicatedLists.appendTo("#contenu_lists");
-
-
+                if (count < 5) {
+                    var duplicatedLists = $("#select_rub_prest").last().clone();
+                    duplicatedLists.appendTo("#contenu_lists");
+                    count++;
+                }
             });
+
 
 
         });
-  </script>
+    </script>
 {% endblock %}
